yoshimi 1.5.11 M

2019-7-29 Will
* GUI offset added to collect_readData.
* GUI offset added to collect_data.
* GUI offset added to fetchData.
* BugFix: Memory overrun in ring buffer.
* Moved envelope 'X' from miscmsg to offset.
* Updated docs.
* Corrected date.
* Moved formant vowel from miscmsg to offset.
* Updated docs.

2019-7-28 Will
* Copy-paste cleanups.
* Started separating miscmsg from other controls.
* Renamed all GUI par2 labels as miscmsg.
* Fixed regression CLI off by 1 history list loading.
* All CLI changes complete.

2019-7-27 Will
* Moved (now common) preset lists to base parameters.
* Considerably re-factored copy-paste.
* Added preset error reports to GUI.
* Enabled management of old and new preset types.

2019-7-26 Will
* Managing preset roots now use standard Yoshimi calls.
  Not yet accessible to CLI.
  Add root failure not yet reported to GUI.
* Updated docs.

2019-7-23 Will
* Corrected preset store save - was wiping out others :(
* Added placeholders for better preset directory controls.
* Corrected date of last changelog entry!

2019-7-22 Will
* Preset directories now unified across instances.
  Selectable without re-ordering but a lot of code
  cleanup still needed.
* Updated manual.

2019-7-21 Will
* Failed to actually add manual to commit :(
* Preliminary ideas for preset roots.
* Converted envelope type numbers to labels.

2019-7-19 Will
* Temporary install of provisional 1.6.0 manual
  but named as 1.5.12

2019-7-15 Will
* Made more bank calls require root and bank.

2019-7-14 Will
 * Revised LV2 code Re. buffer sizes.
 * Included corrected full explanation in code.
 * Made more bank calls require root and bank.
 * Further bank refinements and removed redundant code.
 * Partially resolved LV2, Carla/Ardour now consistent.
 * Updated /Miscellany/Images.

2019-7-10 Will
* Implimented formal calls to read current root and bank.
* All instrument name bank calls now require root and bank.
  current values no longer assumed.