@@ -3,9 +3,6 @@ BUG! If jack is selected for audio but there are no physical ports Yoshimi quits
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
-Copy/paste doesn't maintain effects changed status on pasted location.
-Remember to nothe tha this work cross instance!!!
-
 Master UI windows makes direct calls to FileMgr :(
 
 Revise GUI voice list related to voice editor.
@@ -30,8 +27,6 @@ Requested: auto 'apply' timer for padsynth.
 
 Do a dual scan for banks so that IDd ones are found first, then any new ones picked up on the second scan. This stops known ones being re-ordered when 'foreign' entries appear from outside Yoshimi.
 
-Pasting effect doesn't update effect title.
-
 Expand MIDI-learn to include:
     learn groups
     GUI view by group but CLI and running search only by CC & chan
@@ -40,8 +35,6 @@ Make NRPN MIDI-learn able to be re-learned.
 
 LV2: internal sound banks do not appear to be exposed as LV2 presets
 Visible in carla apparently.
-
-Make loading effect presets update the 'top' line.
 
 Startup state load doesn't set buffersize correctly - partially resolved. Size is ignored if loaded when already running (which is reasonable).
 
